<resources>
    <string name="app_name">narsoe</string>
    <string name="title_search">Search</string>
    <string name="title_recent_calls">Recent calls</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="seacth_input_hint">Phone Number</string>
    <string name="button_search_label">Search</string>
    <string name="setting_switch_define_incoming_call">Define incoming call</string>
    <string name="setting_switch_show_modal_window">Close modal window when call apply</string>
    <string name="setting_plain_text_hint">ADD_SOME_DOMAIN_INFO</string>
    <string name="info_caller_phone">Phone number</string>
    <string name="info_block_info_header">Some information</string>
    <string name="bad_request">Oooh… Something went wrong</string>
    <string name="call_info_number_example">555–555–555</string>
    <string name="call_info_info_example">Name SomeName \nRating SomeNumber \nType SomeType</string>
    <string name="setting_modal_window_position">Modal window position</string>
    <string name="recentCallsActivityNumberCopied">Number copied</string>
</resources>
